[package]
name = "discord_help_bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
rand = "0.5.5"
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.9.0-rc.2"}

